@@ -868,21 +868,15 @@ value for USE-OVERLAYS."
 (autoload 'consult-kill "consult-kill" nil t)
 
 
-(defun send-password-to-buffer-process (buffer)
+(defun send-password-to-process (process)
   "Read a password and send it to the process in BUFFER."
   (interactive
    (list
-    (if (or current-prefix-arg (not (get-buffer-process (current-buffer))))
-        (consult--read
-         (consult--buffer-query
-          :predicate (lambda (buf)
-                       (get-buffer-process buf))
-          :as #'consult--buffer-pair)
-         :prompt "Buffer: "
-         :category 'buffer
-         :lookup #'consult--lookup-cdr)
-      (current-buffer))))
-  (process-send-string (get-buffer-process buffer)
+    (if-let* ((proc (get-buffer-process (current-buffer)))
+              ((not current-prefix-arg)))
+        proc
+      (read-process-name "Process: "))))
+  (process-send-string process
                        (concat
                         (read-passwd "Password: ")
                         "\n")))
@@ -1463,8 +1457,7 @@ Display the result in a posframe." t)
 
 (setq vc-follow-symlinks t)
 (setq vc-svn-global-switches
-      '("--force-interactive"
-        "--config-option"
+      '("--config-option"
         "config:auth:password-stores=gnome-keyring")
       vc-svn-diff-switches '("-x" "-u -p"))
 (keymap-set vc-prefix-map "." '+vc/dir-here)
